@@ -1,3 +1,10 @@
+Thu Dec 31 05:56:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/socket/extconf.rb: fix for wide-getaddrinfo option.
+
+	* ext/socket/addrinfo.c: rename {addr,name}info functions to ensure
+	  those are used on darwin.
+
 Thu Dec 31 01:58:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/extmk.rb: fix for extstatic.
